@@ -3,6 +3,7 @@ package com.example.universalconfig.forge.screen;
 import com.example.universalconfig.core.FileOperationLogger;
 import com.example.universalconfig.core.PendingImport;
 import com.example.universalconfig.core.ProfileManifest;
+import com.example.universalconfig.core.ProfileIcon;
 import com.example.universalconfig.core.ProfileService;
 import com.example.universalconfig.core.ProfileSummary;
 import com.example.universalconfig.core.UniversalConfigException;
@@ -11,11 +12,16 @@ import com.example.universalconfig.core.UniversalConfigPaths;
 import com.example.universalconfig.forge.ForgeRestartService;
 import net.minecraft.client.Minecraft;
 import com.mojang.blaze3d.vertex.PoseStack;
+import com.mojang.blaze3d.systems.RenderSystem;
 import net.minecraft.client.gui.screens.ConfirmScreen;
 import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.item.ItemStack;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.util.FormattedCharSequence;
 import net.minecraft.network.chat.Component;
+
+
 import net.minecraft.Util;
 
 import java.nio.file.Files;
@@ -49,10 +55,12 @@ public final class ProfileListScreen extends Screen {
     private static final int DETAIL_LINE_HEIGHT = 12;
     private static final int PROFILE_ICON_SIZE = 28;
     private static final int SCROLLBAR_WIDTH = 3;
+    private static final int REORDER_BUTTON_WIDTH = 16;
+    private static final int REORDER_BUTTON_HEIGHT = 16;
     private static final int MORE_BUTTON_WIDTH = 34;
     private static final int MENU_WIDTH = 132;
     private static final int MENU_ITEM_GAP = 2;
-    private static final int MENU_ITEM_COUNT = 5;
+    private static final int MENU_ITEM_COUNT = 6;
     private static final int MENU_HEIGHT = MENU_ITEM_COUNT * BUTTON_HEIGHT + (MENU_ITEM_COUNT - 1) * MENU_ITEM_GAP + 8;
     private static final int CLOSE_BUTTON_SIZE = 20;
     private static final String SAFE_DATE_PATTERN = "yyyy/MM/dd HH:mm";
@@ -80,12 +88,17 @@ public final class ProfileListScreen extends Screen {
     private Path defaultProfilePath;
     private Component status = Component.empty();
     private final List<Button> moreMenuButtons = new ArrayList<>();
+    private final List<Button> reorderButtons = new ArrayList<>();
     private int selectedProfileIndex;
     private int listScroll;
     private int detailScroll;
     private boolean moreMenuOpen;
     private boolean restarting;
     private boolean cancelingPendingApply;
+    private int draggingProfileIndex = -1;
+    private int dragTargetIndex = -1;
+    private double dragStartY;
+    private boolean draggingProfile;
     private String dateFormatterLanguage;
     private DateTimeFormatter dateFormatter;
 
@@ -119,14 +132,14 @@ public final class ProfileListScreen extends Screen {
             listScroll = Math.min(listScroll, maxListScroll());
             detailScroll = Math.min(detailScroll, maxDetailScroll());
         } catch (UniversalConfigException | RuntimeException ex) {
-            profiles = List.of();
+            profiles = java.util.Collections.emptyList();
             pendingImport = null;
             defaultProfilePath = null;
             selectedProfileIndex = -1;
             listScroll = 0;
             detailScroll = 0;
-            status = ex instanceof UniversalConfigException universalConfigException
-                    ? ScreenUtil.errorText(universalConfigException)
+            status = ex instanceof UniversalConfigException
+                    ? ScreenUtil.errorText((UniversalConfigException) ex)
                     : Component.translatable("screen.universal_config.load_failed");
         }
     }
@@ -270,6 +283,7 @@ public final class ProfileListScreen extends Screen {
     private void rebuildButtons() {
         clearWidgets();
         moreMenuButtons.clear();
+        reorderButtons.clear();
         int firstRow = firstVisibleRow();
         int lastRow = lastVisibleRowExclusive();
         for (int index = firstRow; index < lastRow; index++) {
@@ -283,15 +297,13 @@ public final class ProfileListScreen extends Screen {
                 continue;
             }
             Button profileButton = new ProfileCardButton(cardX(), clippedTop, cardWidth(),
-                    clippedBottom - clippedTop, narration, button -> {
-                selectedProfileIndex = profileIndex;
-                detailScroll = 0;
-                moreMenuOpen = false;
-                rebuildButtons();
-            });
+                    clippedBottom - clippedTop, narration, button -> selectProfile(profileIndex));
             // The empty visual label avoids duplicating the custom two-line card. Narration still announces the
             // profile name, so keyboard and screen-reader users receive the same selection context.
             addRenderableWidget(profileButton);
+            if (fullCardY >= listTop() && fullCardY + CARD_HEIGHT <= listBottom()) {
+                addReorderButtons(profileIndex, fullCardY);
+            }
         }
 
         ProfileSummary selected = selectedProfile();
@@ -345,12 +357,14 @@ public final class ProfileListScreen extends Screen {
                 .bounds(x, y, width, BUTTON_HEIGHT).build());
         addMoreMenuButton(Button.builder(Component.translatable("screen.universal_config.open_folder"), button -> openProfileDirectory())
                 .bounds(x, y + BUTTON_HEIGHT + MENU_ITEM_GAP, width, BUTTON_HEIGHT).build());
-        addMoreMenuButton(Button.builder(Component.translatable("screen.universal_config.duplicate"), button -> duplicate(path))
+        addMoreMenuButton(Button.builder(Component.translatable("screen.universal_config.rename"), button -> rename(path))
                 .bounds(x, y + (BUTTON_HEIGHT + MENU_ITEM_GAP) * 2, width, BUTTON_HEIGHT).build());
-        addMoreMenuButton(Button.builder(Component.translatable("screen.universal_config.backups"), button -> openBackups())
+        addMoreMenuButton(Button.builder(Component.translatable("screen.universal_config.duplicate"), button -> duplicate(path))
                 .bounds(x, y + (BUTTON_HEIGHT + MENU_ITEM_GAP) * 3, width, BUTTON_HEIGHT).build());
-        addMoreMenuButton(Button.builder(Component.translatable("screen.universal_config.delete"), button -> confirmDelete(path))
+        addMoreMenuButton(Button.builder(Component.translatable("screen.universal_config.backups"), button -> openBackups())
                 .bounds(x, y + (BUTTON_HEIGHT + MENU_ITEM_GAP) * 4, width, BUTTON_HEIGHT).build());
+        addMoreMenuButton(Button.builder(Component.translatable("screen.universal_config.delete"), button -> confirmDelete(path))
+                .bounds(x, y + (BUTTON_HEIGHT + MENU_ITEM_GAP) * 5, width, BUTTON_HEIGHT).build());
     }
 
     private void openBackups() {
@@ -362,10 +376,74 @@ public final class ProfileListScreen extends Screen {
         addRenderableWidget(button);
     }
 
+    private void addReorderButtons(int profileIndex, int cardY) {
+        int x = cardX() + cardWidth() - REORDER_BUTTON_WIDTH - 4;
+        int y = cardY + 3;
+        Button upButton = Button.builder(Component.literal("\u2191"), button -> moveProfile(profileIndex, profileIndex - 1))
+                .createNarration(ignored -> Component.translatable("screen.universal_config.move_up"))
+                .bounds(x, y, REORDER_BUTTON_WIDTH, REORDER_BUTTON_HEIGHT).build();
+        upButton.active = profileIndex > 0;
+        Button downButton = Button.builder(Component.literal("\u2193"), button -> moveProfile(profileIndex, profileIndex + 1))
+                .createNarration(ignored -> Component.translatable("screen.universal_config.move_down"))
+                .bounds(x, y + REORDER_BUTTON_HEIGHT + 1, REORDER_BUTTON_WIDTH, REORDER_BUTTON_HEIGHT).build();
+        downButton.active = profileIndex < profiles.size() - 1;
+        reorderButtons.add(upButton);
+        reorderButtons.add(downButton);
+        addRenderableWidget(upButton);
+        addRenderableWidget(downButton);
+    }
+
     private ProfileSummary selectedProfile() {
         return selectedProfileIndex >= 0 && selectedProfileIndex < profiles.size()
                 ? profiles.get(selectedProfileIndex)
                 : null;
+    }
+
+    private void selectProfile(int profileIndex) {
+        if (profileIndex < 0 || profileIndex >= profiles.size()) {
+            return;
+        }
+        selectedProfileIndex = profileIndex;
+        detailScroll = 0;
+        moreMenuOpen = false;
+        rebuildButtons();
+    }
+
+    private void rename(Path path) {
+        ProfileSummary summary = null;
+        for (ProfileSummary profile : profiles) {
+            if (profile.path().equals(path)) {
+                summary = profile;
+                break;
+            }
+        }
+        String currentName = summary == null ? translation("screen.universal_config.this_profile")
+                : profileName(summary.manifest());
+        moreMenuOpen = false;
+        minecraft.setScreen(new ProfileRenameScreen(this, path, currentName, () -> {
+            status = Component.empty();
+            reload();
+            rebuildButtons();
+        }));
+    }
+
+    private void moveProfile(int sourceIndex, int targetIndex) {
+        if (sourceIndex < 0 || sourceIndex >= profiles.size()
+                || targetIndex < 0 || targetIndex >= profiles.size()
+                || sourceIndex == targetIndex) {
+            return;
+        }
+        Path path = profiles.get(sourceIndex).path();
+        try {
+            ScreenUtil.service().moveProfile(ScreenUtil.instancePath(), path, targetIndex);
+            status = Component.empty();
+            moreMenuOpen = false;
+            reload();
+            selectedProfileIndex = indexOfPath(path);
+            rebuildButtons();
+        } catch (UniversalConfigException | RuntimeException ex) {
+            handleActionFailure(ex, "screen.universal_config.reorder_failed");
+        }
     }
 
     private void openConfirm(Path path) {
@@ -553,8 +631,8 @@ public final class ProfileListScreen extends Screen {
     }
 
     private void handleActionFailure(Exception ex, String fallbackKey) {
-        if (ex instanceof UniversalConfigException universalConfigException) {
-            status = ScreenUtil.errorText(universalConfigException);
+        if (ex instanceof UniversalConfigException) {
+            status = ScreenUtil.errorText((UniversalConfigException) ex);
         } else {
             status = Component.translatable(fallbackKey);
         }
@@ -590,7 +668,93 @@ public final class ProfileListScreen extends Screen {
             moreMenuOpen = false;
             rebuildButtons();
         }
+        if (button == 0) {
+            int profileIndex = profileIndexAt(mouseX, mouseY);
+            int reorderDelta = reorderDeltaAt(mouseX, mouseY);
+            if (profileIndex >= 0 && reorderDelta != 0) {
+                moveProfile(profileIndex, profileIndex + reorderDelta);
+                return true;
+            }
+            if (profileIndex >= 0 && !insideReorderControls(mouseX, mouseY)) {
+                draggingProfileIndex = profileIndex;
+                dragTargetIndex = profileIndex;
+                dragStartY = mouseY;
+                draggingProfile = false;
+                return true;
+            }
+        }
         return super.mouseClicked(mouseX, mouseY, button);
+    }
+
+    @Override
+    public boolean mouseDragged(double mouseX, double mouseY, int button, double deltaX, double deltaY) {
+        if (button == 0 && draggingProfileIndex >= 0) {
+            if (!draggingProfile && Math.abs(mouseY - dragStartY) > 3) {
+                draggingProfile = true;
+            }
+            if (draggingProfile) {
+                dragTargetIndex = dropIndexAt(mouseY);
+                return true;
+            }
+        }
+        return super.mouseDragged(mouseX, mouseY, button, deltaX, deltaY);
+    }
+
+    @Override
+    public boolean mouseReleased(double mouseX, double mouseY, int button) {
+        if (button == 0 && draggingProfileIndex >= 0) {
+            int sourceIndex = draggingProfileIndex;
+            int targetIndex = dragTargetIndex;
+            boolean wasDragging = draggingProfile;
+            draggingProfileIndex = -1;
+            dragTargetIndex = -1;
+            draggingProfile = false;
+            if (wasDragging) {
+                moveProfile(sourceIndex, targetIndex);
+            } else if (profileIndexAt(mouseX, mouseY) == sourceIndex) {
+                selectProfile(sourceIndex);
+            }
+            return true;
+        }
+        return super.mouseReleased(mouseX, mouseY, button);
+    }
+
+    private int profileIndexAt(double mouseX, double mouseY) {
+        if (mouseX < cardX() || mouseX >= cardX() + cardWidth()
+                || mouseY < listTop() || mouseY >= listBottom()) {
+            return -1;
+        }
+        int relativeY = (int) mouseY - listTop() + listScroll;
+        int index = relativeY / CARD_STEP;
+        int rowOffset = relativeY % CARD_STEP;
+        return index >= 0 && index < profiles.size() && rowOffset < CARD_HEIGHT ? index : -1;
+    }
+
+    private boolean insideReorderControls(double mouseX, double mouseY) {
+        return reorderDeltaAt(mouseX, mouseY) != 0;
+    }
+
+    private int reorderDeltaAt(double mouseX, double mouseY) {
+        int index = profileIndexAt(mouseX, mouseY);
+        if (index < 0) {
+            return 0;
+        }
+        int x = cardX() + cardWidth() - REORDER_BUTTON_WIDTH - 4;
+        int y = cardY(index) + 3;
+        if (inside(mouseX, mouseY, x, y, REORDER_BUTTON_WIDTH, REORDER_BUTTON_HEIGHT)) {
+            return -1;
+        }
+        return inside(mouseX, mouseY, x, y + REORDER_BUTTON_HEIGHT + 1,
+                REORDER_BUTTON_WIDTH, REORDER_BUTTON_HEIGHT) ? 1 : 0;
+    }
+
+    private int dropIndexAt(double mouseY) {
+        if (profiles.isEmpty()) {
+            return -1;
+        }
+        int relativeY = (int) mouseY - listTop() + listScroll - CARD_HEIGHT / 2;
+        int index = relativeY / CARD_STEP;
+        return Math.max(0, Math.min(profiles.size() - 1, index));
     }
 
     private boolean inside(double mouseX, double mouseY, int x, int y, int width, int height) {
@@ -606,6 +770,8 @@ public final class ProfileListScreen extends Screen {
         drawDetailContent(context);
         super.render(context, mouseX, mouseY, delta);
         drawProfileCards(context, mouseX, mouseY);
+        drawDragIndicator(context);
+        drawReorderButtons(context, mouseX, mouseY, delta);
         drawScrollbar(context);
         drawDetailScrollbar(context);
         drawStatus(context);
@@ -632,18 +798,18 @@ public final class ProfileListScreen extends Screen {
     }
 
     private String pendingProfileName() {
-        if (pendingImport == null || pendingImport.profilePath == null || pendingImport.profilePath.isBlank()) {
+        if (pendingImport == null || pendingImport.profilePath == null || pendingImport.profilePath.trim().isEmpty()) {
             return translation("screen.universal_config.this_profile");
         }
         try {
-            Path pendingPath = Path.of(pendingImport.profilePath).toAbsolutePath().normalize();
+            Path pendingPath = java.nio.file.Paths.get(pendingImport.profilePath).toAbsolutePath().normalize();
             for (ProfileSummary profile : profiles) {
                 if (profile.path().toAbsolutePath().normalize().equals(pendingPath)) {
                     return profileName(profile.manifest());
                 }
             }
             String fileName = pendingPath.getFileName() == null ? "" : pendingPath.getFileName().toString();
-            return fileName.isBlank() ? translation("screen.universal_config.this_profile") : fileName;
+            return fileName.trim().isEmpty() ? translation("screen.universal_config.this_profile") : fileName;
         } catch (RuntimeException ex) {
             return translation("screen.universal_config.this_profile");
         }
@@ -693,12 +859,15 @@ public final class ProfileListScreen extends Screen {
 
         y += 31;
         for (FormattedCharSequence line : descriptionLines(manifest)) {
-            drawString(context, font, line, x, y, SECONDARY_TEXT_COLOR);
+            font.draw(context, line, x, y, SECONDARY_TEXT_COLOR);
             y += DETAIL_LINE_HEIGHT;
         }
         y += 3;
         drawTrimmed(context, updatedSummary(manifest), x, y, contentWidth, MUTED_TEXT_COLOR);
         y += 18;
+        // 表示名とは別に、共有ファイルを識別できるよう実際の .ucp ファイル名を表示する。
+        drawTrimmed(context, profileFileName(selected), x, y, contentWidth, MUTED_TEXT_COLOR);
+        y += 14;
         fill(context, x, y, x + contentWidth, y + 1, DIVIDER_COLOR);
         drawString(context, font, Component.translatable("screen.universal_config.included_settings"),
                 x, y + 9, SECONDARY_TEXT_COLOR);
@@ -721,6 +890,7 @@ public final class ProfileListScreen extends Screen {
     private int detailContentHeight(ProfileManifest manifest) {
         int includeLines = Math.max(1, includedSettingCount(manifest));
         return 8 + 31 + descriptionLines(manifest).size() * DETAIL_LINE_HEIGHT + 3 + 18 + 25
+                + 14
                 + includeLines * 15;
     }
 
@@ -735,13 +905,20 @@ public final class ProfileListScreen extends Screen {
     }
 
     private String descriptionSummary(ProfileManifest manifest) {
-        return manifest.description == null || manifest.description.isBlank()
+        return manifest.description == null || manifest.description.trim().isEmpty()
                 ? translation("screen.universal_config.description_none")
                 : manifest.description;
     }
 
     private String updatedSummary(ProfileManifest manifest) {
         return formatDate(manifest.updatedAt);
+    }
+
+    private String profileFileName(ProfileSummary summary) {
+        if (summary == null || summary.path() == null || summary.path().getFileName() == null) {
+            return "";
+        }
+        return summary.path().getFileName().toString();
     }
 
     private String loaderSummary(ProfileManifest manifest) {
@@ -755,7 +932,7 @@ public final class ProfileListScreen extends Screen {
     }
 
     private String formatDate(String value) {
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             return translation("screen.universal_config.date_unknown");
         }
         try {
@@ -838,7 +1015,7 @@ public final class ProfileListScreen extends Screen {
             int iconY = y + (CARD_HEIGHT - PROFILE_ICON_SIZE) / 2;
             drawProfileIcon(context, iconX, iconY, PROFILE_ICON_SIZE, manifest.icon);
             int textX = iconX + PROFILE_ICON_SIZE + 9;
-            int textWidth = cardX() + cardWidth() - textX - 7;
+            int textWidth = cardX() + cardWidth() - textX - REORDER_BUTTON_WIDTH - 12;
             int nameWidth = textWidth;
             if (isDefaultProfile(summary.path())) {
                 String marker = translation("screen.universal_config.default_marker");
@@ -856,8 +1033,39 @@ public final class ProfileListScreen extends Screen {
         ScreenUtil.disableScissor();
     }
 
+    private void drawDragIndicator(PoseStack context) {
+        if (!draggingProfile || dragTargetIndex < 0 || dragTargetIndex == draggingProfileIndex) {
+            return;
+        }
+        int y = dragTargetIndex > draggingProfileIndex
+                ? cardY(dragTargetIndex) + CARD_HEIGHT - 1
+                : cardY(dragTargetIndex) - 1;
+        fill(context, cardX(), y, cardX() + cardWidth(), y + 2, SELECTED_BORDER_COLOR);
+    }
+
+    private void drawReorderButtons(PoseStack context, int mouseX, int mouseY, float delta) {
+        for (Button button : reorderButtons) {
+            button.render(context, mouseX, mouseY, delta);
+        }
+    }
+
     private void drawProfileIcon(PoseStack context, int x, int y, int size, String iconId) {
-        ScreenUtil.drawProfileIcon(x, y, size, iconId);
+        ItemStack stack = ScreenUtil.iconStack(iconId);
+        float scale = size / 16.0F;
+        // 1.16's ItemRenderer does not consume this screen's PoseStack. Transforming only the context leaves the
+        // item at the unscaled origin, where the panel scissor clips it completely. Use the legacy RenderSystem model
+        // view stack so both list-card and detail icons are rendered at their intended coordinates.
+        PoseStack modelView = RenderSystem.getModelViewStack();
+        modelView.pushPose();
+        try {
+            modelView.translate(x, y, 0.0F);
+            modelView.scale(scale, scale, 1.0F);
+            RenderSystem.applyModelViewMatrix();
+            minecraft.getItemRenderer().renderAndDecorateItem(stack, 0, 0);
+        } finally {
+            modelView.popPose();
+            RenderSystem.applyModelViewMatrix();
+        }
     }
 
     private DateTimeFormatter displayDateFormatter() {
@@ -883,11 +1091,11 @@ public final class ProfileListScreen extends Screen {
     }
 
     private Locale localeForLanguage(String languageCode) {
-        if (languageCode.isBlank()) {
+        if (languageCode.trim().isEmpty()) {
             return Locale.ENGLISH;
         }
         Locale locale = Locale.forLanguageTag(languageCode.replace('_', '-'));
-        return locale.getLanguage().isBlank() ? Locale.ENGLISH : locale;
+        return locale.getLanguage().trim().isEmpty() ? Locale.ENGLISH : locale;
     }
 
     private boolean isDefaultProfile(Path profilePath) {
@@ -962,20 +1170,18 @@ public final class ProfileListScreen extends Screen {
         if (loader.isEmpty()) {
             return loader;
         }
-        return switch (loader.toLowerCase()) {
-            case "fabric" -> "Fabric";
-            case "forge" -> "Forge";
-            case "neoforge" -> "NeoForge";
-            default -> loader.substring(0, 1).toUpperCase() + loader.substring(1);
-        };
+        if ("fabric".equalsIgnoreCase(loader)) return "Fabric";
+        if ("forge".equalsIgnoreCase(loader)) return "Forge";
+        if ("neoforge".equalsIgnoreCase(loader)) return "NeoForge";
+        return loader.substring(0, 1).toUpperCase() + loader.substring(1);
     }
 
     private String safe(String value) {
-        return value == null || value.isBlank() ? translation("screen.universal_config.unknown") : value;
+        return value == null || value.trim().isEmpty() ? translation("screen.universal_config.unknown") : value;
     }
 
     private String profileName(ProfileManifest manifest) {
-        return manifest == null || manifest.name == null || manifest.name.isBlank()
+        return manifest == null || manifest.name == null || manifest.name.trim().isEmpty()
                 ? translation("screen.universal_config.this_profile")
                 : manifest.name;
     }
@@ -997,7 +1203,7 @@ public final class ProfileListScreen extends Screen {
     }
 
     private static final class ProfileCardButton extends Button {
-        private ProfileCardButton(int x, int y, int width, int height, MutableComponent narration, OnPress onPress) {
+        private ProfileCardButton(int x, int y, int width, int height, MutableComponent narration, Button.OnPress onPress) {
             super(x, y, width, height, narration, onPress);
         }
 
